Dodanie paragrafów i ustwienie stylów

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Zadanie 31145</title>
   </head>
   <body>
-
-    
+    <p></p>
+    <p></p>
+    <p></p>
+    <p class="blueparagraph"></p>
+    <p class="blueparagraph"></p>
+    <p class="blueparagraph"></p>
+    <p></p>
+    <p class="opacity"></p>
+    <p class="opacity"></p>
+    <p></p>
   </body>
 </html>
